@@ -6,6 +6,7 @@ NEW FEATURES
 * New account credit view
 * Auth0 authentication frontend implementation
 * Translations for English and Spanish languages
+* New Menus view
 * New Provider Menus view
 * Buy menu feature
 * Search menus feature
@@ -16,6 +17,7 @@ KNOWN ISSUES
 
 NOTES
 * There's still no user type to differentiate between providers and normal clients
+* There's still no show notifications when the purchase is made
 
 
 ------------------------Previous Releases----------------------------
